scrollbar bugfix

--- a/resources/app/css/home.css
+++ b/resources/app/css/home.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     font-family: Arial, sans-serif;
     background-color: #35363a;
+    overflow-y: hidden;
 }
 
 .container {
